# gundam-python-interface

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: 01_demo.ipynb  02_plot_first_sample_histograms.ipynb  03_manual_minimizer_parameter_likelihood.ipynb  04_first_sample_first_event.ipynb  05_first_event_dial_cache.ipynb  06_load_engine_state_from_root.ipynb  07_plot_first_sample_2d_histogram.ipynb
scripts/: 01_demo_initialize.py
src/gundam_interface/: __init__.py  _version.py  config.py  interface.py  loader.py  logging.py  parameters.py  root_state.py  runtime.py  samples.py
tests/: test_package.py
