[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gundam-interface"
version = "0.1.0"
description = "User friendly Python interface for GUNDAM."
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-2.1-or-later"
license-files = ["LICENCE"]
authors = [
  { name = "Nadrino" }
]
keywords = ["gundam", "interface", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = [
  "numpy",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "twine"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
